--- a/index.html
+++ b/index.html
@@ -1,9 +1,45 @@
-<head>
-    <link rel="stylesheet" href="style.scss">
-</head>
-<body>
-    <div class="centered-div">
-    </div>
-
-    <script src="js/main.mjs"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>homepage</title>
+        <link rel="stylesheet" href="src/style.scss">
+        <script src="js/main.mjs"></script>
+    </head>
+    <body>
+        <div class="main-div">
+            <header>
+                <div>
+                    <img src="src/img/icon.png">
+                    <p>sannu's website</p>
+                </div>
+                <p class="current-rand-message">current message: yeowch i hit my toe</p>
+            </header>
+            <div class="content">
+                <nav>
+                    <a href="/">about</a>
+                    <a href="/">creations</a>
+                    <a href="/">shrine</a>
+                </nav>
+                <main>
+                    <p>this is a website where i mainly just put things that i would find
+                        interesting or cool. a personal "portfolio" or a corner on the internet
+                    </p>
+                    <p>there are some things to explore around here and if i'm not lazy
+                        i'll fill it with some more stuff. i am currently the most active on
+                        my <a href="https://bsky.app/profile/sannu.neocities.org">bluesky</a> account
+                    </p>
+                    <p>thank you for visiting!</p>
+                </main>
+                <footer>
+                    <p class="footer-flair-label">footer content</p>
+                    <a href="https://www.youtube.com/channel/UClr2jFYJj28v-tMZVD43W0Q">youtube</a>
+                    <a href="https://bsky.app/profile/sannu.neocities.org">bluesky</a>
+                    <a href="alt.html">bluesky-alt</a>
+                    <a href="https://steamcommunity.com/id/holyfuckimcumming/">steam</a>
+                </footer>
+            </div>
+        </div>
+    </body>
+</html>
