--- a/alt.html
+++ b/alt.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>homepage</title>
-        <link rel="stylesheet" href="src/style.scss">
+        <link rel="stylesheet" href="src/style.css">
         <script src="js/main.mjs"></script>
     </head>
     <body style="background: black;">
