--- a/alt.html
+++ b/alt.html
@@ -7,9 +7,13 @@
         <link rel="stylesheet" href="src/style.css">
         <script src="js/main.mjs"></script>
     </head>
-    <body style="background: black;">
-        <div class="minigame-div">
-            <img class="centered-image" src="src/img/minigame/note.png">
+    <body style="background-color: black;">
+        <div class="shortcut-container">
+            <a href="index.html" class="shortcut-button">
+                <img src="src/img/back.png" alt="Back">
+            </a>
         </div>
+
+        <img class="centered-image" src="src/img/message.png">
     </body>
 </html>
