--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="src/style.css">
         <script src="js/main.mjs"></script>
     </head>
-    <body>
+    <body class="tiled-background">
         <div class="main-div">
             <header>
                 <div>
@@ -18,9 +18,9 @@
             </header>
             <div class="content">
                 <nav>
-                    <a href="/">about</a>
-                    <a href="/">creations</a>
-                    <a href="/">shrine</a>
+                    <a href="about.html">about</a>
+                    <a href="creations.html">creations</a>
+                    <a href="#">shrines</a>
                 </nav>
                 <main>
                     <p>this is a website where i mainly just put things that i would find
@@ -35,9 +35,9 @@
                 <footer>
                     <p class="footer-flair-label">footer content</p>
                     <a href="https://www.youtube.com/channel/UClr2jFYJj28v-tMZVD43W0Q">youtube</a>
-                    <a href="https://bsky.app/profile/sannu.neocities.org">bluesky</a>
-                    <a href="alt.html">bluesky-alt</a>
                     <a href="https://steamcommunity.com/id/holyfuckimcumming/">steam</a>
+                    <a href="https://bsky.app/profile/sannu.neocities.org">bluesky</a>
+                    <a href="alt.html">?</a>
                 </footer>
             </div>
         </div>
