--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <nav>
                     <a href="about.html">about</a>
                     <a href="creations.html">creations</a>
+                    <a href="balatrotracker.html">balatrotracker</a>
                     <a href="#">shrines</a>
                 </nav>
                 <main>
