--- a/creations.html
+++ b/creations.html
@@ -12,7 +12,7 @@
             <div class="content">
                 <main>
                     <h4>Sannu's Mod (Balatro)</h4>
-                    <p>i made <a href="#">this</a> mod for balatro as a part of a small collaboration between
+                    <p>i made <a href="https://github.com/SannusGitHub/sannusmod">this</a> mod for balatro as a part of a small collaboration between
                         my friends, to brush up on my skills with lua and because i've had a
                         balatro obsession. the mod features around 15 jokers with relatively vanilla-like
                         mechanics and art, and two card deck skins
