--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
                 <main>
                     <h1>info</h1>
                     <p>while i do not publicize my name (obviously), most people just call me
-                        sannu. i'm a 20 year old estonian and last time i checked i'm in fact a guy with
-                        maybe a bit questioning here and there, i don't stress about it
+                        sannu. i'm a 20 year old estonian and last time i checked i'm a guy, with
+                        maybe a bit questioning or a 'they' here and there, i don't stress about it
                     </p>
                     <p>i tend to usually keep to myself. it is nobodys business what i do unless they
                         want to intentionally peer in, in which case that is your fault
