--- a/creations.html
+++ b/creations.html
@@ -38,7 +38,7 @@
                     </p>
                     <h4>Image Archive (VRChat)</h4>
                     <p>as a small activity i like to go around world-hopping and interacting in vrchat, collecting a surplus of images in regards to
-                        my adventures on the platform. download available <a href="#">here</a>
+                        my adventures on the platform. download available <s><a href="#">here</a></s>
                     </p>
                 </main>
                 
