--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="about.html">about</a>
                     <a href="creations.html">creations</a>
                     <a href="balatrotracker.html">balatrotracker</a>
-                    <a href="#">shrines</a>
+                    <s><a href="#">shrines</a></s>
                 </nav>
                 <main>
                     <p>this is a website where i mainly just put things that i would find
