discord well-known & creations change

--- a/creations.html
+++ b/creations.html
@@ -24,6 +24,13 @@
 
                         while unfinished, i still intend to return to it in some capacity by adding more or reworking it
                     </p>
+                    <h4>sannu42town (ROBLOX)</h4>
+                    <p>done as a small project and now left on the official "i'll work on this later" shelf for now
+                        <a href="https://www.roblox.com/games/11086268242/sannu42town-2">this</a> project was a small collab with a few friends trying to revive an injoke
+                        and make it an actual small thing.
+
+                        while unfinished, i still intend to return to it in some capacity by adding more or reworking it
+                    </p>
                 </main>
                 <main>
                     <h4>Cut and Obscure Video Game Content (Twitter)</h4>
@@ -37,8 +44,8 @@
                         based off of a reference image
                     </p>
                     <h4>Image Archive (VRChat)</h4>
-                    <p>as a small activity i like to go around world-hopping and interacting in vrchat, collecting a surplus of images in regards to
-                        my adventures on the platform. download available <s><a href="#">here</a></s>
+                    <p>as a small fun activity i like to go around world-hopping and interacting in vrchat, collecting a surplus of images in regards to
+                        my adventures on the platform. archive download available <s><a href="#">here</a></s>
                     </p>
                 </main>
                 
