--- a/balatrotracker.html
+++ b/balatrotracker.html
@@ -38,39 +38,39 @@
             <img src="src/img/balatro/balatrotracker.png" style="display:block; margin-left:auto; margin-right: auto;">
             <h1>Save Statistics</h1>
         </div>
-        <div class="balatro-grid" id="deck-grid">
-            <div class="balatro-container balatro-wide">
-                <div class="balatro-wide-column">
-                    <div class="balatro-stat-entry">
-                        <p>Best Hand</p>
-                        <p>3.34e13</p>
-                    </div>
-                    <div class="balatro-stat-entry">
-                        <p>Highest Round</p>
-                        <p>44</p>
-                    </div>
-                    <div class="balatro-stat-entry">
-                        <p>Highest Ante</p>
-                        <p>13</p>
-                    </div>
-                    <div class="balatro-stat-entry">
-                        <p>Most Played Hand</p>
-                        <p>Flush (13774)</p>
-                    </div>
-                    <div class="balatro-stat-entry">
-                        <p>Most Money</p>
-                        <p>$475</p>
-                    </div>
-                    <div class="balatro-stat-entry">
-                        <p>Best Win Streak</p>
-                        <p>3 (0)</p>
-                    </div>
-                    <div class="balatro-stat-entry">
-                        <p>Collection</p>
-                        <p>100% (150/150)</p>
-                    </div>
+        <div class="balatro-wide">
+            <div class="balatro-wide-column">
+                <div class="balatro-stat-entry">
+                    <p>Best Hand</p>
+                    <p>3.34e13</p>
+                </div>
+                <div class="balatro-stat-entry">
+                    <p>Highest Round</p>
+                    <p>44</p>
+                </div>
+                <div class="balatro-stat-entry">
+                    <p>Highest Ante</p>
+                    <p>13</p>
+                </div>
+                <div class="balatro-stat-entry">
+                    <p>Most Played Hand</p>
+                    <p>Flush (13774)</p>
+                </div>
+                <div class="balatro-stat-entry">
+                    <p>Most Money</p>
+                    <p>$475</p>
+                </div>
+                <div class="balatro-stat-entry">
+                    <p>Best Win Streak</p>
+                    <p>3 (0)</p>
+                </div>
+                <div class="balatro-stat-entry">
+                    <p>Collection</p>
+                    <p>100% (150/150)</p>
                 </div>
             </div>
+        </div>
+        <div class="balatro-grid" id="deck-grid">
         </div>
         <div class="main-div">
             <footer style="text-align:center;">
