--- a/creations.html
+++ b/creations.html
@@ -24,10 +24,13 @@
 
                         while unfinished, i still intend to return to it in some capacity by adding more or reworking it
                     </p>
+                    <h4>ROBLOX Place Archive (ROBLOX)</h4>
+                    <p>a general repository for some of my projects that ended up going nowhere. archive download available <s><a href="#">here</a></s>
+                    </p>
                 </main>
                 <main>
                     <h4>Cut and Obscure Video Game Content (Twitter)</h4>
-                    <p>i (used to) work and draft for the <a href="#">COVGC</a> hoax account,
+                    <p>i (used to) work and draft for the <a href="https://x.com/CutVideoGame/">COVGC</a> hoax account,
                         namely submitting a <a href="https://x.com/CutVideoGame/status/1675868086077911040">post</a> about an unused Doom FOOT weapon
                         and collaborating with, drafting and creating several other posts uploaded and displayed on the twitter account
                     </p>
