--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </p>
                     <p>there are some things to explore around here and if i'm not lazy
                         i'll fill it with some more stuff. i am currently the most active on
-                        my <a href="https://bsky.app/profile/sannu.neocities.org">bluesky</a> account
+                        my <a href="https://bsky.app/profile/sannusgithub.github.io">bluesky</a> account
                     </p>
                     <p>thank you for visiting!</p>
                 </main>
@@ -37,8 +37,8 @@
                     <p class="footer-flair-label">footer content</p>
                     <a href="https://www.youtube.com/channel/UClr2jFYJj28v-tMZVD43W0Q">youtube</a>
                     <a href="https://steamcommunity.com/id/holyfuckimcumming/">steam</a>
-                    <a href="https://bsky.app/profile/sannu.neocities.org">bluesky</a>
-                    <a href="alt.html">?</a>
+                    <a href="https://bsky.app/profile/sannusgithub.github.io">bluesky</a>
+                    <a href="alt.html">blog</a>
                 </footer>
             </div>
         </div>
