--- a/alt.html
+++ b/alt.html
@@ -4,16 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>homepage</title>
-        <link rel="stylesheet" href="src/style.css">
-        <script src="js/main.mjs"></script>
+        <link rel="stylesheet" href="src/alt-style.css">
+        <script src="js/alt.mjs"></script>
     </head>
-    <body style="background-color: black;">
-        <div class="shortcut-container">
-            <a href="index.html" class="shortcut-button">
-                <img src="src/img/back.png" alt="Back">
-            </a>
+    <body id="content">
+        <div class="input-box-div">
+            <p id="input-message">blog access restricted. please contact owner for info</p>
+            <input id="input-box">
         </div>
-
-        <img class="centered-image" src="src/img/message.png">
     </body>
 </html>
