--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
-    <link rel="stylesheet" type="text/css" href="src/style.scss">
+    <link rel="stylesheet" type="text/css" href="src/style.css">
     <script src="src/main.mjs"></script>
 </head>
 <body>
