--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
+    <link rel="icon" type="image/x-icon" href="src/rei.ico">
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <script src="src/main.mjs"></script>
 </head>
