--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <br><br>
                         tend to keep to myself for the most part, welcome
                         <br><br>
-                        <p>my current time is <span id="currentTime"></span></p>
+                        <p>my current time is <span id="currentTime">...?</span></p>
                     </p>
                 </div>
             </div>
