formatted landing page better, work on diary

--- a/diary.html
+++ b/diary.html
@@ -20,29 +20,22 @@
                 <a href="https://steamcommunity.com/id/holyfuckimcumming/">steam</a>
                 <a><s>about</s></a>
                 <a><s>creations</s></a>
-                <a><s>diary</s></a>
+                <a href="diary.html">diary</a>
             </div>
-            <div class="content colored-container right-side-image">
-                <div class="text-section">
+            <div class="content colored-container">
+                <div>
+                    <h1>DIARY</h1>
                     <p>
-                        hi, my name is <u>sannu</u> and this is my website. i'm a junior software engineer, as well as a general hobbyist
-
-                        <br><br>
-                        this website is a general dumping ground for things that i find interesting. tech, projects, niche ramblings and thoughts
-
-                        <br><br>
-                        21 years old, he/they and i do things because i find them fun
+                        this part of the website serves as a hub for all my ramblings and thoughts that i
+                        don't really want to post on any of my more public platforms
                     </p>
-                </div>
-                <div class="image-section">
-                    <img src="src/img/rei.png">
+                    <div id="diary-entries">
+                        <a href="#">test entry #1</a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="section">
-            <div class="sidebar center-content">
-                <p>current time: <span id="currentTime">...?</span></p>
-            </div>
             <div class="content colored-container center-content">
                 <p>(c) 2024 - 2025 // made with love</p>
             </div>
