404 start, diary work, event fx & secret

--- a/diary.html
+++ b/diary.html
@@ -5,7 +5,7 @@
     <title>homepage</title>
     <link rel="icon" type="image/x-icon" href="src/rei.ico">
     <link rel="stylesheet" type="text/css" href="src/style.css">
-    <script src="src/main.mjs"></script>
+    <script src="src/diary.mjs"></script>
 </head>
 <body>
     <div class="main">
@@ -23,15 +23,9 @@
                 <a href="diary.html">diary</a>
             </div>
             <div class="content colored-container">
-                <div>
-                    <h1>DIARY</h1>
-                    <p>
-                        this part of the website serves as a hub for all my ramblings and thoughts that i
-                        don't really want to post on any of my more public platforms
-                    </p>
-                    <div id="diary-entries">
-                        <a href="#">test entry #1</a>
-                    </div>
+                <h1 id="diary-title"></h1>
+                <h4 id="diary-date"></h4>
+                <div id="diary-content">
                 </div>
             </div>
         </div>
@@ -41,5 +35,5 @@
             </div>
         </div>
     </div>
-    <!-- <img class="bg-image" src="src/img/rei.png"> -->
+    <img class="bg-image" src="src/img/corner-flair.png">
 </body>
