steam link update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p class="sub-label colored-container">NAVIGATION</p>
                 <a href="https://bsky.app/profile/queerslop.club">bsky</a>
                 <a href="https://github.com/SannusGitHub">github</a>
-                <a href="https://steamcommunity.com/id/holyfuckimcumming/">steam</a>
+                <a href="https://steamcommunity.com/id/i_am_a_gooning_god/">steam</a>
                 <a href="https://open.spotify.com/user/312xvltkpgtfholetgfxjonj3mmm">spotify</a>
                 <a href="https://anilist.co/user/starsannu/animelist">anilist</a>
                 <p class="sub-label colored-container">SITE</p>
@@ -28,7 +28,7 @@
             <div class="content colored-container right-side-image">
                 <div class="text-section">
                     <p>
-                        hi, my name is <u>sannu</u> and this is my website. i'm a  2 year junior software engineer, as well as a general hobbyist
+                        hi, my name is <u>sannu</u> and this is my website. i'm a 2 year junior software engineer, as well as a general hobbyist
 
                         <br><br>
                         this website is a general dumping ground for things that i find interesting. tech, projects, niche ramblings and thoughts
@@ -44,6 +44,10 @@
         </div>
         <div class="section">
             <div class="sidebar center-content">
+                <!--<form id="uploadForm" action="http://localhost:3333/api/black-hole" method="POST" enctype="multipart/form-data">
+                    <input type="file" name="uploadFileForm">
+                    <input type="submit" value="Upload">
+                </form>-->
                 <p>current time: <span id="currentTime">...?</span></p>
                 <!-- <p>last updated: <span id="lastUpdated"></span></p> -->
             </div>
