about-me, general polish

--- a/diary.html
+++ b/diary.html
@@ -31,7 +31,7 @@
         </div>
         <div class="section">
             <div class="content colored-container center-content">
-                <p>(c) 2024 - 2025 // made with love</p>
+                <p>© sannu 2025</p>
             </div>
         </div>
     </div>
