--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <a href="https://open.spotify.com/user/312xvltkpgtfholetgfxjonj3mmm">spotify</a>
                 <a href="https://anilist.co/user/starsannu/animelist">anilist</a>
                 <p class="sub-label colored-container">SITE</p>
-                <a><s>about</s></a>
+                <a href="about.html">about</a>
                 <a><s>creations</s></a>
                 <a><s>diary</s></a>
             </div>
-            <div class="content colored-container right-side-image">
+            <div class="content colored-container sided-image">
                 <div class="text-section">
                     <p>
                         hi, my name is <u>sannu</u> and this is my website. i'm a 2 year junior software engineer, as well as a general hobbyist
@@ -52,7 +52,7 @@
                 <!-- <p>last updated: <span id="lastUpdated"></span></p> -->
             </div>
             <div class="content colored-container center-content">
-                <p>(c) 2024 - 2025 // made with love</p>
+                <p>© sannu 2025</p>
             </div>
         </div>
     </div>
