--- a/404.html
+++ b/404.html
@@ -7,5 +7,9 @@
     <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 <body style="background-color: black;">
-
+    <div class="main">
+        <div class="section">
+            <p>there is nothing for you here</p>
+        </div>
+    </div>
 </body>
