--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="section">
             <div class="sidebar">
-                <p class="sub-label colored-container">NAVIGATION</p>
+                <p class="sub-label colored-container">SOCIALS</p>
                 <a href="https://bsky.app/profile/queerslop.club">bsky</a>
                 <a href="https://github.com/SannusGitHub">github</a>
                 <a href="https://steamcommunity.com/id/i_am_a_gooning_god/">steam</a>
@@ -22,8 +22,8 @@
                 <a href="https://anilist.co/user/starsannu/animelist">anilist</a>
                 <p class="sub-label colored-container">SITE</p>
                 <a href="about.html">about</a>
+                <a href="blog.html">blog</a>
                 <a><s>creations</s></a>
-                <a><s>diary</s></a>
             </div>
             <div class="content colored-container sided-image">
                 <div class="text-section">
