--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                         <p>
                             this is a personal website i've made to share some stuff about myself,
                             so feel free to look around if you want. i don't use public social media
-                            aside from the links to the left
+                            aside from the links in the 'socials' list
                         </p>
                         <p>
                             you're free to contact me at <a href="mailto:starsannu@proton.me">starsannu@proton.me</a> using
