--- a/404.html
+++ b/404.html
@@ -2,14 +2,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>the void</title>
+    <title>404</title>
     <link rel="icon" type="image/x-icon" href="src/rei.ico">
     <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
-<body style="background-color: black;">
-    <div class="main">
-        <div class="section">
-            <p>there is nothing for you here</p>
-        </div>
+<body style="background-color: black; color: white;">
+    <div class="console">
+        <p class="trackfx" id="output">
+            Copyright (C) Dansenält Corporation. All rights reserved<br><br>
+
+            Welcome to WorldashiOS 8.12_5 LTS (GNU/Dansenält 8.12-rev5-generic.shell)<br><br>
+
+            System information as of Mon Mar 1 03:12:11 UTC 2004<br><br>
+
+            Load: 5.51, Processes: 117<br>
+            Usage of A/: 4% of 12.48MB<br>
+            Memory usage: 78%<br><br>
+
+            For a list of available system commands, return 'help'<br><br>
+        </p>
+        <p class="trackfx" id="cmd"></p>
     </div>
+    <script type="module" src="src/404.js"></script>
 </body>
