--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <p class="sub-label colored-container">SITE</p>
                 <a href="about.html">> about</a>
                 <a href="blog.html">blog</a>
-                <a><s>creations</s></a>
+                <a href="creations.html">creations</a>
             </div>
             <div class="content colored-container">
                 <div class="sided-image">
