--- a/creations.html
+++ b/creations.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homepage</title>
+    <title>creations</title>
     <link rel="icon" type="image/x-icon" href="src/rei.ico">
     <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
@@ -23,41 +23,34 @@
                 <p class="sub-label colored-container">SITE</p>
                 <a href="about.html">about</a>
                 <a href="blog.html">blog</a>
-                <a href="creations.html">creations</a>
+                <a href="creations.html">> creations</a>
             </div>
-            <div class="content colored-container sided-image">
+            <div class="content colored-container">
                 <div class="text-section">
+                    <h1>creations</h1>
                     <p>
-                        hi, my name is <u>sannu</u> and this is my website. i'm a 2 year junior software engineer, as well as a general hobbyist
-
-                        <br><br>
-                        this website is a general dumping ground for things that i find interesting. tech, projects, niche ramblings and thoughts
-
-                        <br><br>
-                        21 years old, he/they and i do things because i find them fun
+                        this is where some of my small projects and creations are catalogued. 
+                        some of the things here are things i've made, or participated in, and/or
                     </p>
-                </div>
-                <div class="image-section">
-                    <img src="src/img/rei.png">
+                    <p>
+                        ...of course, this is not <u>all</u> of them but ones that i think are neat
+                    </p>
+                    <p>
+                        some of these are unfinished, shelved or abandoned as well. i maintain at my own
+                        time and when i get the interest for it
+                    </p>
                 </div>
             </div>
         </div>
+        <div class="section grid-container" id="creations-container">
+        </div>
         <div class="section">
-            <div class="sidebar center-content">
-                <!--<form id="uploadForm" action="http://localhost:3333/api/black-hole" method="POST" enctype="multipart/form-data">
-                    <input type="file" name="uploadFileForm">
-                    <input type="submit" value="Upload">
-                </form>-->
-                <p>current time: <span id="currentTime">...?</span></p>
-                <!-- <p>last updated: <span id="lastUpdated"></span></p> -->
-            </div>
             <div class="content colored-container center-content">
                 <p>© sannu 2025</p>
             </div>
         </div>
     </div>
-    <p class="hidden-text">₍^. .^₎⟆</p>
-    <img class="bg-image" id="bg-image" src="src/img/corner-flair.png">
 
     <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/creations.mjs"></script>
 </body>
