404 folder structure, wa/mt/lf/cd

--- a/404.html
+++ b/404.html
@@ -16,12 +16,12 @@
             System information as of Mon Mar 1 03:12:11 UTC 2004<br><br>
 
             Load: 5.51, Processes: 117<br>
-            Usage of A/: 4% of 12.48MB<br>
+            Usage of A/: 4% of 31.48MB<br>
             Memory usage: 78%<br><br>
 
             For a list of available system commands, return 'help'<br><br>
         </p>
-        <p class="trackfx" id="cmd"></p>
+        <p class="trackfx" id="cmd"><span id="input"></span><span id="underline"></span></p>
     </div>
     <script type="module" src="src/404.js"></script>
 </body>
