--- a/404.html
+++ b/404.html
@@ -19,9 +19,12 @@
             Usage of A/: 4% of 31.48MB<br>
             Memory usage: 78%<br><br>
 
+            FOR USE OF INTERNAL SYSTEMS ONLY - PERMISSION TO REDISTRIBUTE IS STRICTLY PROHIBITED<br><br>
+
             For a list of available system commands, return 'help'<br><br>
         </p>
         <p class="trackfx" id="cmd"><span id="input"></span><span id="underline"></span></p>
     </div>
+    <audio id="bg" autoplay="true" loop="true" src="src/audio/bg_loop.wav"></audio>
     <script type="module" src="src/404.js"></script>
 </body>
