--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="src/rei.ico">
     <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
-<body style="background-color: black; color: white;">
+<body style="background-color: black; color: white; background-image: url('src/img/static.gif'); background-size: tile;">
     <div class="console">
         <p class="trackfx" id="output">
             Copyright (C) Dansenält Corporation. All rights reserved<br><br>
